--- a/chatserver/package.json
+++ b/chatserver/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server",
+  "name": "chatserver",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
-    "react-icons": "^5.5.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io": "^4.8.1"
   }
 }
