--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "lodash": "^4.17.21",
+    "quill": "^2.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
