--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "boring-avatars": "^2.0.2",
+    "debounce": "^2.2.0",
     "lodash": "^4.17.21",
+    "next": "^15.5.4",
     "quill": "^2.0.3",
+    "quill-delta": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "y-quill": "^1.0.0",
+    "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
