--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "boring-avatars": "^2.0.2",
+    "cors": "^2.8.5",
     "debounce": "^2.2.0",
+    "express": "^5.1.0",
     "lodash": "^4.17.21",
+    "multer": "^2.0.2",
     "next": "^15.5.4",
     "quill": "^2.0.3",
     "quill-delta": "^5.1.0",
@@ -41,5 +44,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "vite": "^7.1.6"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anjupavithran123/Reomotework.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anjupavithran123/Reomotework/issues"
+  },
+  "homepage": "https://github.com/anjupavithran123/Reomotework#readme"
 }
