--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "debounce": "^2.2.0",
     "express": "^5.1.0",
+    "konva": "^10.0.2",
     "lodash": "^4.17.21",
     "multer": "^2.0.2",
     "next": "^15.5.4",
@@ -25,9 +26,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-konva": "^18.2.14",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "y-quill": "^1.0.0",
