--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "quill": "^2.0.3",
     "quill-delta": "^5.1.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-konva": "^18.2.14",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
-    "react-router-dom": "^7.9.1",
+    "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
