--- a/package.json
+++ b/package.json
@@ -17,24 +17,27 @@
     "cors": "^2.8.5",
     "debounce": "^2.2.0",
     "express": "^5.1.0",
+    "global": "^4.4.0",
     "konva": "^10.0.2",
     "lodash": "^4.17.21",
     "multer": "^2.0.2",
     "next": "^15.5.4",
     "quill": "^2.0.3",
     "quill-delta": "^5.1.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-konva": "^18.2.14",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "y-quill": "^1.0.0",
     "y-webrtc": "^10.3.0",
     "yjs": "^13.6.27"
