--- a/videochat-server/package.json
+++ b/videochat-server/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "server",
+  "name": "videochat-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.18.1",
-    "nodemon": "^3.1.10",
-    "react-icons": "^5.5.0",
+    "http": "^0.0.1-security",
     "socket.io": "^4.8.1"
-   
   }
 }
