--- a/package.json
+++ b/package.json
@@ -65,5 +65,5 @@
   "bugs": {
     "url": "https://github.com/anjupavithran123/Reomotework/issues"
   },
-  "homepage": "https://github.com/anjupavithran123/Reomotework#readme"
+  "homepage": "https://github.com/anjupavithran123/Reomotework"
 }
