--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    
    "name": "remortework",
-   "homepage": "https://anjupavithran123.github.io/Reomotework/",
+   "homepage": "https://anjupavithran123.github.io/Reomotework",
    "private": true,
    "version": "0.0.0",
    "type": "module",
