--- a/package.json
+++ b/package.json
@@ -1,73 +1,198 @@
 {
    
    "name": "remortework",
+   
    "homepage": "https://anjupavithran123.github.io/Reomotework",
+   
    "private": true,
+   
    "version": "0.0.0",
+   
    "type": "module",
+   
    "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d dist",
-      "lint": "eslint .",
-      "preview": "vite preview"
+   
+      
+   "dev": "vite",
+   
+      
+   "build": "vite build",
+   
+      
+   "predeploy": "npm run build",
+   
+      
+   "deploy": "gh-pages -d dist",
+   
+      
+   "lint": "eslint .",
+   
+      
+   "preview": "vite preview"
+   
    },
+   
    "dependencies": {
-      "@tailwindcss/vite": "^4.1.13",
-      "axios": "^1.12.2",
-      "bootstrap": "^5.3.8",
-      "boring-avatars": "^2.0.2",
-      "cors": "^2.8.5",
-      "debounce": "^2.2.0",
-      "express": "^5.1.0",
-      "global": "^4.4.0",
-      "konva": "^10.0.2",
-      "lodash": "^4.17.21",
-      "multer": "^2.0.2",
-      "next": "^15.5.4",
-      "quill": "^2.0.3",
-      "quill-delta": "^5.1.0",
-      "react": "^18.3.1",
-      "react-beautiful-dnd": "^13.1.1",
-      "react-dom": "^18.3.1",
-      "react-icons": "^5.5.0",
-      "react-konva": "^18.2.14",
-      "react-quill": "^2.0.0",
-      "react-quill-new": "^3.6.0",
-      "react-router-dom": "^7.9.3",
-      "react-toastify": "^11.0.5",
-      "simple-peer": "^9.11.1",
-      "socket.io": "^4.8.1",
-      "socket.io-client": "^4.8.1",
-      "tailwindcss": "^4.1.13",
-      "uuid": "^13.0.0",
-      "y-quill": "^1.0.0",
-      "y-webrtc": "^10.3.0",
-      "yjs": "^13.6.27"
+   
+      
+   "@tailwindcss/vite": "^4.1.13",
+   
+      
+   "axios": "^1.12.2",
+   
+      
+   "bootstrap": "^5.3.8",
+   
+      
+   "boring-avatars": "^2.0.2",
+   
+      
+   "buffer": "^6.0.3",
+   
+      
+   "cors": "^2.8.5",
+   
+      
+   "debounce": "^2.2.0",
+   
+      
+   "express": "^5.1.0",
+   
+      
+   "global": "^4.4.0",
+   
+      
+   "konva": "^10.0.2",
+   
+      
+   "lodash": "^4.17.21",
+   
+      
+   "multer": "^2.0.2",
+   
+      
+   "next": "^15.5.4",
+   
+      
+   "process": "^0.11.10",
+   
+      
+   "quill": "^2.0.3",
+   
+      
+   "quill-delta": "^5.1.0",
+   
+      
+   "react": "^18.3.1",
+   
+      
+   "react-beautiful-dnd": "^13.1.1",
+   
+      
+   "react-dom": "^18.3.1",
+   
+      
+   "react-icons": "^5.5.0",
+   
+      
+   "react-konva": "^18.2.14",
+   
+      
+   "react-quill": "^2.0.0",
+   
+      
+   "react-quill-new": "^3.6.0",
+   
+      
+   "react-router-dom": "^7.9.3",
+   
+      
+   "react-toastify": "^11.0.5",
+   
+      
+   "simple-peer": "^9.11.1",
+   
+      
+   "socket.io": "^4.8.1",
+   
+      
+   "socket.io-client": "^4.8.1",
+   
+      
+   "tailwindcss": "^4.1.13",
+   
+      
+   "uuid": "^13.0.0",
+   
+      
+   "y-quill": "^1.0.0",
+   
+      
+   "y-webrtc": "^10.3.0",
+   
+      
+   "yjs": "^13.6.27"
+   
    },
+   
    "devDependencies": {
-      "@eslint/js": "^9.35.0",
-      "@types/react": "^19.1.13",
-      "@types/react-dom": "^19.1.9",
-      "@vitejs/plugin-react": "^5.0.2",
-      "eslint": "^9.35.0",
-      "eslint-plugin-react-hooks": "^5.2.0",
-      "eslint-plugin-react-refresh": "^0.4.20",
-      "gh-pages": "^6.3.0",
-      "globals": "^16.4.0",
-      "vite": "^7.1.6"
+   
+      
+   "@eslint/js": "^9.35.0",
+   
+      
+   "@types/react": "^19.1.13",
+   
+      
+   "@types/react-dom": "^19.1.9",
+   
+      
+   "@vitejs/plugin-react": "^5.0.2",
+   
+      
+   "eslint": "^9.35.0",
+   
+      
+   "eslint-plugin-react-hooks": "^5.2.0",
+   
+      
+   "eslint-plugin-react-refresh": "^0.4.20",
+   
+      
+   "gh-pages": "^6.3.0",
+   
+      
+   "globals": "^16.4.0",
+   
+      
+   "vite": "^7.1.6"
+   
    },
+   
    "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+   
    "main": "eslint.config.js",
+   
    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/anjupavithran123/Reomotework.git"
+   
+      
+   "type": "git",
+   
+      
+   "url": "git+https://github.com/anjupavithran123/Reomotework.git"
+   
    },
+   
    "keywords": [],
+   
    "author": "",
+   
    "license": "ISC",
+   
    "bugs": {
-      "url": "https://github.com/anjupavithran123/Reomotework/issues"
+   
+      
+   "url": "https://github.com/anjupavithran123/Reomotework/issues"
+   
    }
 }
