--- a/signup-server/.env
+++ b/signup-server/.env
@@ -1,1 +1,3 @@
 PORT=3001
+ALLOWED_ORIGIN=https://anjupavithran123.github.io/Reomotework
+MONGO_URL=mongodb+srv://anjupavithranm95_db_user:1234@cluster0.xyiidkl.mongodb.net/employee
